# cvr

./: .gitignore  LICENSE  README.md  pyproject.toml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: DropZone.tsx  Pipeline.tsx  ResultView.tsx  SettingsPanel.tsx  StatusBar.tsx
docs/: cvr-ui-design-spec.md
src/cvr/: __init__.py  __main__.py  audio.py  cli.py  srt.py  transcribe.py  translate.py
